fix spacing, font size for mobile

--- a/projects/projcss/stillsprojectstyle.css
+++ b/projects/projcss/stillsprojectstyle.css
@@ -86,12 +86,12 @@ and (-webkit-device-pixel-ratio : 3) {
   }
 
   .projInfo {
-  transform: translateY(5vh);
+  transform: translateY(5vh) !important;
   margin: auto 2vw;
   text-align: center;
   display: block;
   font-size: 40px;
-  line-height: 3vw;
+  line-height: 3vw !important;
 
   }
 }
